Update and rename IDE:/Visual Studio Code/.vscode tasks.json/readme.md to IDE:/Visual Studio Code/.vscode tasks.json & launch.json readme.md

--- a/IDE:/Visual Studio Code/.vscode tasks.json & launch.json readme.md
+++ b/IDE:/Visual Studio Code/.vscode tasks.json & launch.json readme.md
@@ -1,4 +1,4 @@
-# Doc:
+# tasks.json:
 https://github.com/microsoft/vscode-cmake-tools/blob/main/docs/build.md#create-a-build-task
 
 ># Create a build task
@@ -55,3 +55,7 @@ https://github.com/microsoft/vscode-cmake-tools/blob/main/docs/build.md#create-a
 }
 ```
 >Now you can run the build by running Tasks: Run Build Task from the VS Code command pallette. If there are other tasks defined in "tasks.json", the picker will show you the list of build tasks to choose from.
+
+# Launch.json
+CMake: Debug and launch  
+https://github.com/microsoft/vscode-cmake-tools/blob/main/docs/debug-launch.md
