Update .vscode tasks.json & launch.json readme.md

--- a/IDE:/Visual Studio Code/.vscode tasks.json & launch.json readme.md
+++ b/IDE:/Visual Studio Code/.vscode tasks.json & launch.json readme.md
@@ -1,7 +1,7 @@
 # tasks.json:
 https://github.com/microsoft/vscode-cmake-tools/blob/main/docs/build.md#create-a-build-task
 
-># Create a build task
+>## Create a build task
 >You can also define a build task from the VS Code command palette by running the Tasks: Configure Task command.
 >
 >By choosing the "CMake: build" task, the following task will be created in "${workspaceFolder}/.vscode/tasks.json" file.
@@ -57,5 +57,10 @@ https://github.com/microsoft/vscode-cmake-tools/blob/main/docs/build.md#create-a
 >Now you can run the build by running Tasks: Run Build Task from the VS Code command pallette. If there are other tasks defined in "tasks.json", the picker will show you the list of build tasks to choose from.
 
 # Launch.json
-CMake: Debug and launch  
+## CMake: Debug and launch  
 https://github.com/microsoft/vscode-cmake-tools/blob/main/docs/debug-launch.md
+
+## Debug using a launch.json file
+_This is the config I want! makes top right "run" buttons work._
+
+https://github.com/microsoft/vscode-cmake-tools/blob/main/docs/debug-launch.md#debug-using-a-launchjson-file
